k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ci-task-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devops-task.local
    http:
      paths:
      - path: /color-generator-be
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /img-color-gen-fe
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5173
